--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-asarPy==1.0.1
-blinker==1.8.2
-click==8.1.7
-Cython==0.29.37
 Flask==3.0.3
 Flask-MySQL==1.5.2
 Flask-SQLAlchemy==3.1.1
@@ -12,7 +8,6 @@ Mako==1.3.5
 Markdown==3.6
 MarkupSafe==2.1.5
 meson==1.3.2
-mysql-connector-python==9.0.0
 pkg==0.2
 pygame==2.6.0
 Pygments==2.18.0
@@ -22,3 +17,6 @@ SQLAlchemy==2.0.31
 typing_extensions==4.12.2
 Werkzeug==3.0.3
 numpy==2.1.1
+pandas==2.2.3
+geopandas==1.0.1
+matplotlib==3.9.2
