--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,15 @@
 Flask==3.0.3
 Flask-MySQL==1.5.2
 Flask-SQLAlchemy==3.1.1
-greenlet==3.0.3
-itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.5
 Markdown==3.6
 MarkupSafe==2.1.5
 meson==1.3.2
+mysql-connector-python==9.0.0
 pkg==0.2
-pygame==2.6.0
-Pygments==2.18.0
 PyMySQL==1.1.1
-six==1.16.0
 SQLAlchemy==2.0.31
-typing_extensions==4.12.2
-Werkzeug==3.0.3
 numpy==2.1.1
 pandas==2.2.3
 geopandas==1.0.1
-matplotlib==3.9.2
