--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,18 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "app.py", "use": "@vercel/python" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "app.py" }
-    ]
-  }
+  "functions": {
+    "app.py": {
+      "runtime": "python3.9"
+    },
+    "mapa_app.py": {
+      "runtime": "python3.9"
+    },
+    "diccionario_app.py": {
+      "runtime": "python3.9"
+    }
+  },
+  "routes": [
+    { "src": "/", "dest": "/app.py" },
+    { "src": "/mapa", "dest": "/mapa_app.py" },
+    { "src": "/diccionario", "dest": "/diccionario_app.py" }
+  ]
+}
